crates/stef-build/tests/snapshots/parser__compile@alias-basic.stef.snap
---
source: crates/stef-build/tests/parser.rs
expression: "/// Sample type alias.\ntype Sample = u32;"
input_file: crates/stef-parser/tests/inputs/alias-basic.stef
---
/// Sample type alias.
pub type Sample = u32;

