crates/stef-build/tests/snapshots/parser__compile@attribute-multi.stef.snap
---
source: crates/stef-build/tests/parser.rs
expression: "#[validate(min = 1, max = 100)]\nstruct Sample"
input_file: crates/stef-parser/tests/inputs/attribute-multi.stef
---
pub struct Sample;
impl ::stef::Encode for Sample {
    fn encode(&self, w: &mut impl ::stef::BufMut) {}
}
impl ::stef::Decode for Sample {
    fn decode(r: &mut impl ::stef::Buf) -> ::stef::buf::Result<Self> {
        loop {
            match ::stef::buf::decode_id(r)? {
                ::stef::buf::END_MARKER => break,
                _ => continue,
            }
        }
        Ok(Self)
    }
}

