crates/stef-build/tests/snapshots/parser__compile@const-basic.stef.snap
---
source: crates/stef-build/tests/parser.rs
expression: "const BOOL_TRUE: bool = true;\nconst BOOL_FALSE: bool = false;\nconst INT: u32 = 100;\nconst FLOAT: f64 = 5.5;\nconst STRING: string = \"value\";\nconst BYTES: bytes = [1, 2, 3];"
input_file: crates/stef-parser/tests/inputs/const-basic.stef
---
const BOOL_TRUE: bool = true;
const BOOL_FALSE: bool = false;
const INT: u32 = 100;
const FLOAT: f64 = 5.5;
const STRING: &str = "value";
const BYTES: &[u8] = b"\x01\x02\x03";

